# ai-experiments

./: README.md  makefile  pyproject.toml
apps/blackjack/: main.py  prompt.py
apps/blackjack/functions/: dealer.py  main.py  player.py
apps/blackjack/web3/: main.py
apps/blackjack/web3/abi/: Blackjack.json
apps/customer_service/: main.py
contracts/broadcast/Deploy.s.sol/2524852/: run-1737384506.json  run-latest.json
contracts/broadcast/ERC20.s.sol/2524852/: run-1737384348.json  run-latest.json
contracts/script/: Blackjack.s.sol  Deploy.s.sol  DepositToHouse.s.sol  ERC20.s.sol  WithdrawFromHouse.s.sol
contracts/src/: Blackjack.sol  ERC20.sol
contracts/test/: Blackjack.t.sol
