[tool.poetry]
name = "ai-experiments"
version = "0.1.0"
description = "Plethora of Ai Agents built on top of the Huddle01 AI SDK"
authors = ["Arush Kurundodi <arushkurundodi@gmail.com>"]
license = "Apache License 2.0"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
ruff = "^0.9.1"
web3 = "^7.6.1"
eth-account = "^0.13.4"
ai01 = "^0.2.14"

[tool.ruff]
exclude = ["proto"]

[tool.ruff.lint]
extend-select = ["I"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
